# Heart_DT

./: .gitattributes  .gitignore  README.md
BioGears_UE5_Bridge/: CMakeLists.txt  live_graph.py  main.cpp
BioGears_UE5_Bridge/biogears_include/biogears/: cdm-exports.h  circuit_test_exports.h  common-exports.h  exports.h  io-exports.h
BioGears_UE5_Bridge/biogears_include/biogears/schema/: BioGearsDataModel.hxx  CommonDataModel.hxx
BioGears_UE5_Bridge/biogears_include/biogears/schema/biogears/: BioGears.hxx  BioGearsConfiguration.cxx  BioGearsConfiguration.hxx  BioGearsEnvironment.hxx  BioGearsEquipment.hxx  BioGearsPhysiology.cxx  BioGearsPhysiology.hxx
BioGears_UE5_Bridge/biogears_include/biogears/schema/cdm/: Anesthesia.hxx  AnesthesiaActions.hxx  Circuit.cxx  Circuit.hxx  Compartment.hxx  ElectroCardioGram.hxx  EngineConfiguration.cxx  EngineConfiguration.hxx  EngineState.hxx  Environment.cxx  Environment.hxx  EnvironmentActions.hxx  EnvironmentConditions.hxx  Inhaler.hxx  InhalerActions.hxx  Patient.cxx  Patient.hxx  PatientActions.cxx  PatientActions.hxx  PatientAssessments.cxx  PatientAssessments.hxx  PatientConditions.hxx  PatientNutrition.cxx  PatientNutrition.hxx  Physiology.cxx  Physiology.hxx  Properties.hxx  Scenario.cxx  Scenario.hxx  Substance.cxx  Substance.hxx  SubstanceQuantity.hxx  System.hxx  TestReport.hxx
Comsol/: Heart Digital Twin.mph  ue5_heart_comsol_outputs.csv
Comsol/Surfaces/: Extracted Hear Cavity.stl  cavityLA.stl  cavityLV.stl  cavityRA.stl  cavityRV.stl  epicard.stl  master.stl  (+3 more)
Heart_Digital_Twin/: Heart_Digital_Twin.uproject
(+311 files in other folders)
